# Order

./: .env  .gitignore  app.py  database.puml  database.py  pyproject.toml  util.py
migrations/versions/: 07fa739614e0_add_admin_table.py  15273f1aa848_add_relations.py  2d38a6c70f07_delete_stable_from_orderitems.py  3cf4d59ddfbd_secondary_table.py  4c2e3e2b8f39_delete_column_of_products_id_from_.py  78412e789323_add_column_deleted_provided_to_.py  7dc107a289e2_orderlist_add_options.py  bb676129fee6_add_column_stable_to_orderitems.py  dd202e846160_option_id_2_option_id_from_product_.py  debbdd26bc3c_create_intermedia_tabel_orderitems_.py  e6666235fa16_add_price_to_products_options_table.py
static/: AddOptions.js  AddOptions.ts  AddProducts.js  AddProducts.ts  admin.css  admin.js  admin.ts  package-lock.json  package.json  script.js  script.ts  style.css  tsconfig.json
static/script/: AddOptions.js  AddOptions.ts  AddProducts.js  AddProducts.ts  CUDInterface.ts  DeleteOption.js  DeleteOption.ts  DeleteProduct.js  DeleteProduct.ts  admin.js  admin.ts
static/script/private/admin/: AddOptions.js  AddOptions.ts  AddProducts.js  AddProducts.ts  DeleteOption.js  DeleteOption.ts  DeleteProduct.js  DeleteProduct.ts  UpdateProducts.js  UpdateProducts.ts  admin.js  admin.ts
static/script/public/: order-list.js  order-list.ts  order.js  order.ts  script.js  script.ts
static/style/: admin.css  style.css
templates/: base.html  dashboard.html  order.html  order_list.html  sales.html  settings.html
